--- a/manager/static/css/main.css
+++ b/manager/static/css/main.css
@@ -11,6 +11,12 @@ textarea {
 /********************************* Content ***********************************/
 
 
+/********************************* Sidebar ***********************************/
+
+#logo {
+	width: 100%;
+}
+
 /********************************** Footer ***********************************/
 footer {
 	margin: 50px 0;
