--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -25,7 +25,7 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-    <link rel="icon" type='image/x-icon' href="{{ MEDIA_URL }}img/favicon.ico">
+    <link rel="icon" type='image/x-icon' href="{{ STATIC_URL }}img/favicon.ico">
 </head>
 
 <body>
@@ -71,6 +71,14 @@
                 <!-- Logout -->
                 {% endif %}
 
+                <div class="well">
+                    <a href="/posts.json">Export all posts to Json</a>
+                </div>
+                
+
+                <div class="well">
+                    <img src="{{ STATIC_URL }}img/logo-tony.png" id="logo">
+                </div>
             </div>
         </div>
 
